# peroxymanova

./: .gitconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md  pyproject.toml  test.py
.github/workflows/: CI.yml  bump.py  bump.yml  check-bump.yml  python-version-test.yml
api/: Cargo.toml  tests.py
api/pytests/: becnhes.py
api/pytests/reference/: packed.py
api/src/: lib.rs
benches/: benches.rs
core/: Cargo.toml
core/benches/: benches.rs
core/src/: lib.rs  main.rs
pytests/: becnhes.py  requirements.txt  test_s.py  tests.py
pytests/reference/: packed.py  square.py
python/peroxymanova/: __init__.py  _oxide.pyi  _peroxymanova.py  _scipy_types.py  bar.py  distance.py  types.py
src/: lib.rs  main.rs
