[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "peroxymanova"
description = "'ANOVA supercharged' supercharged"
license = { file = "LICENSE.txt" }
readme = "README.md"
version = "0.3.1"
requires-python = ">=3.8,<3.13"
dependencies = [
    "numpy>=1.15,<1.27",
    "scipy>=1.1,<1.13"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "peroxymanova._oxide"

[tool.pytest.ini_options]
testpaths = ["pytests"]
