[package]
name = "peroxymanovaaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "peroxymanovaaa"
crate-type = ["cdylib"]

[dependencies]
numpy = { workspace = true }
pyo3 = "0.20.1"
peroxymanova_core = { path = "../core" }

