[package]
name = "peroxymanova_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = true

[dependencies]
numpy = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
# polars = "0.36.2"

[dev-dependencies]
criterion = "0.5.1"
